--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # and then set the following values into your app's "Application settings".
 
 CLIENT_ID="acafabd4-f515-4eb7-b088-8795c529f752"
-CLIENT_SECRET="EaN8Q~RnBzIskkSUnNgJZxaFG4vXNE.WlFUxxbPD"
+CLIENT_SECRET="zIa8Q~dAuLDdmuc1KHdyzh~dGf8snlW8Sn.zxahc"
 TENANT_ID ="6f6c5001-0faf-4736-8db4-33d6f1ff6e81"
 # Expects a full tenant id such as "contoso.onmicrosoft.com", or its GUID
 # Or leave it undefined if you are building a multi-tenant app
